# Projeto-programcao-funcional

./: README.md  SortingBenchmark.cabal  quicksort.hs  tabela.py
src/: Main.hs
